refactor: stop reusing EntityManager